Update README.md and image path

--- a/assets/initial 20231228.md
+++ b/assets/initial 20231228.md
@@ -22,4 +22,4 @@
 
 [![Plato and Aristotle](https://upload.wikimedia.org/wikipedia/commons/9/98/Sanzio_01_Plato_Aristotle.jpg)](https://en.wikipedia.org/wiki/File:Sanzio_01_Plato_Aristotle.jpg)
 
-![photo](./assets/DALL·E%202023-12-28%2018.28.51%20-%20A%20symbolic%20illustration%20showing%20the%20intersection%20of%20technology,%20philosophy,%20politics,%20and%20innovation.%20The%20scene%20includes%20a%20modern%20laboratory%20represent.png)
+![photo](DALL·E%202023-12-28%2018.28.51%20-%20A%20symbolic%20illustration%20showing%20the%20intersection%20of%20technology,%20philosophy,%20politics,%20and%20innovation.%20The%20scene%20includes%20a%20modern%20laboratory%20represent.png)
